# aduanamap-mx

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
ai/: README.md  assistant.py  guard.py  knowledge.py  llm.py
ai/domains/: TEMPLATE.py.txt  __init__.py
ai/prompts/: system.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  cache.py  config.py  db.py  envelope.py  logging.py  main.py  ratelimit.py  security.py
apps/api/app/routers/: __init__.py  agreements.py  assistant.py  banxico.py  calculator.py  classify.py  countries.py  health.py  sources.py  tariff.py  wiki.py
apps/api/app/services/: __init__.py  calculator.py  search.py  tariff.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
core/migrations/: 0001_init.sql  0002_domain.sql
data/geojson/: README.md
data/seed/: agreements.json
docs/: references.md  report-compliance.md  tlc-mexico.md
docs/architecture/: etl-core.md  overview.md
docs/decisions/: 0001-lean-scaffold.md  0002-ai-boundary.md  0003-security-headers.md  0004-world-map.md
tests/ai/: test_assistant.py  test_domain_registry.py  test_security.py  (+1 more)
tools/: gen_agreements_md.py
workers/: Dockerfile  __init__.py  anam_tratados.py  banxico_fix.py  comex_bridge.py  dof_watch.py  geometry_import.py  migrate_duckdb_to_pg.py  pyproject.toml  seed_agreements.py  seed_countries.py  snice_ligie.py  vucem_clasificador.py
workers/common/: __init__.py  db.py  http.py  manifest.py  source_job.py
(+35 files in other folders)
