[project]
name = "aduanamap-workers"
version = "0.1.0"
description = "AduanaMap MX ETL workers (capture -> preserve -> parse -> normalize -> publish)"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
xlsx = ["openpyxl>=3.1"]      # SNICE/VUCEM
html = ["selectolax>=0.3"]   # ANAM/DOF

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["workers", "workers.common"]
